AArch64: Debug build VM crashes with PrintC1Statistics option

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • b12
    • aarch64
    • linux

      E.g.

      $ java -XX:+PrintC1Statistics -jar SPECjvm2008.jar

      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/assembler_aarch64.hpp:251
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/njian/Work/jdk/tip/src/hotspot/cpu/aarch64/assembler_aarch64.hpp:251), pid=4695, tid=4707
      # guarantee(chk == -1 || chk == 0) failed: Field too big for insn
      #
      # JRE version: OpenJDK Runtime Environment (11.0) (slowdebug build 11-internal+0-adhoc.njian.tip)
      # Java VM: OpenJDK 64-Bit Server VM (slowdebug 11-internal+0-adhoc.njian.tip, mixed mode, tiered, compressed oops, g1 gc, linux-aarch64)
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/njian/work/jdk/test/benchmarks/specjvm2008/core.4695)
      #
      # An error report file with more information is saved as:
      # /home/njian/work/jdk/test/benchmarks/specjvm2008/hs_err_pid4695.log
      [thread 4711 also had an error]
      [thread 4709 also had an error]
      [thread 4710 also had an error]
      #
      # Compiler replay data is saved as:
      # /home/njian/work/jdk/test/benchmarks/specjvm2008/replay_pid4695.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #
      Current thread is 4707
      Dumping core ...
      Aborted (core dumped)

      The trace:

      V [libjvm.so+0x1021350] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, std::__va_list)+0x80
      V [libjvm.so+0x73be20] report_vm_error(char const*, int, char const*, char const*, ...)+0x160
      V [libjvm.so+0x2cb61c] Instruction_aarch64::sf(long, int, int)+0x94
      V [libjvm.so+0x2cc878] Assembler::sf(long, int, int)+0x30
      V [libjvm.so+0x2cf564] Assembler::ld_st2(RegisterImpl*, Address const&, int, int, int)+0x1e8
      V [libjvm.so+0x3fe3c8] Assembler::ldrw(RegisterImpl*, Address const&)+0x30
      V [libjvm.so+0xc5e858] MacroAssembler::ldrw(RegisterImpl*, Address const&)+0x50
      V [libjvm.so+0xc5f610] MacroAssembler::incrementw(Address, int)+0xb4
      V [libjvm.so+0x4b2198] LIR_Assembler::emit_arraycopy(LIR_OpArrayCopy*)+0x2090
      V [libjvm.so+0x49891c] LIR_OpArrayCopy::emit_code(LIR_Assembler*)+0x1c
      V [libjvm.so+0x4a2278] LIR_Assembler::emit_lir_list(LIR_List*)+0x18c
      V [libjvm.so+0x4a20bc] LIR_Assembler::emit_block(BlockBegin*)+0x1c8
      V [libjvm.so+0x4a1ea4] LIR_Assembler::emit_code(BlockList*)+0x68
      V [libjvm.so+0x4518f0] Compilation::emit_code_body()+0x128
      V [libjvm.so+0x451c28] Compilation::compile_java_method()+0x268
      V [libjvm.so+0x451fa4] Compilation::compile_method()+0xec
      V [libjvm.so+0x4527b0] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, DirectiveSet*)+0x260
      V [libjvm.so+0x457738] Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xd0
      V [libjvm.so+0x6cca48] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x680
      V [libjvm.so+0x6cb98c] CompileBroker::compiler_thread_loop()+0x388
      V [libjvm.so+0xf9d810] compiler_thread_entry(JavaThread*, Thread*)+0x9c
      V [libjvm.so+0xf98040] JavaThread::thread_main_inner()+0x1bc
      V [libjvm.so+0xf97e54] JavaThread::run()+0x224
      V [libjvm.so+0xdaca94] thread_native_entry(Thread*)+0x190
      C [libpthread.so.0+0x6fc4] start_thread+0xa4

            Assignee:
            Ningsheng Jian (Inactive)
            Reporter:
            Ningsheng Jian (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: