8202186: AArch64: Debug build VM crashes with PrintC1Statistics option

Reviewed-by: aph